syntax = "proto3";

package userPackage;

import "user.proto";

message SignUpUserInput {
  string name = 1;
  string email = 2;
  string password = 3;
  string passwordConfirm = 4;
  string photo = 5;
  string provider = 6;
}

message SignUpUserResponse { User user = 1; }
